# football_predictions

./: .gitattributes  .gitignore  Makefile  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/predictor/: .env.example  alembic.ini  pyproject.toml
apps/predictor/data/: wc2026_squads.json
apps/predictor/migrations/: env.py
apps/predictor/migrations/versions/: 2026_06_04_925fccbb938d_initial_schema.py
apps/predictor/reports/: backtest-phase0.json  backtest-phase0.md  probes-phase0.md  probes-soccerdata.json  probes-the-odds-api.json
apps/predictor/scripts/: dump_openapi.py  fix_team_code_dupes.py  ingest_oddsportal.py  ingest_tournaments.py  qualitative_demo.py  roi_backtest.py  tune_model.py
apps/predictor/scripts/probes/: soccerdata_probe.py  the_odds_api_probe.py
apps/predictor/src/predictor/: __init__.py  config.py  observability.py
apps/predictor/src/predictor/api/: __init__.py  events.py  main.py  notes_watcher.py  schemas.py
apps/predictor/src/predictor/backtest/: acceptance.py  dataset.py  metrics.py  roi.py  run.py
apps/predictor/src/predictor/db/: __init__.py  models.py  session.py
apps/predictor/src/predictor/ingest/: __init__.py  _upsert.py  clubs.py  contracts.py  fbref_source.py  squad_heuristic.py  squads.py  team_dedup.py  tournaments.py
apps/predictor/src/predictor/model/: dixon_coles.py  markets.py  qualitative.py
apps/predictor/src/predictor/odds/: __init__.py  devig.py  one_x_bet.py  the_odds_api.py
apps/predictor/tasks/plans/: model-beat-market.md  steady-swinging-pine.md
apps/predictor/tests/: test_observability.py
apps/predictor/tests/api/: test_endpoints.py  test_notes_sse.py
apps/predictor/tests/backtest/: test_acceptance.py  test_dataset.py  test_metrics.py  test_roi.py  test_run.py
apps/predictor/tests/db/: test_migrations.py
apps/predictor/tests/ingest/: test_clubs.py  test_squad_heuristic.py  test_squads.py  test_team_dedup.py  test_tournaments.py
apps/predictor/tests/model/: test_dixon_coles.py  test_markets.py  test_qualitative.py
apps/predictor/tests/odds/: test_devig.py  test_one_x_bet.py  test_the_odds_api.py
scripts/: ci.sh
(+47 files in other folders)
