[project]
name = "predictor"
version = "0.1.0"
description = "Football match outcome predictor — Phase 0 backend"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.22",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "sse-starlette>=2.1",
    "scipy>=1.14",
    "numpy>=2.1",
    "pandas>=2.2",
    "soccerdata>=1.9",
    "httpx>=0.27",
    "watchfiles>=0.24",
    "python-dotenv>=1.0",
    "predictor-schemas",
]

[tool.uv.sources]
predictor-schemas = { path = "../../packages/schemas", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "mypy>=1.13",
    "ruff>=0.7",
    "types-requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/predictor"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "RUF",           # ruff-specific
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]
"scripts/**" = ["B008"]
# Dixon-Coles uses Greek letters (α, β, γ, δ, λ, μ, ρ, τ) as canonical
# mathematical notation in docstrings and comments; they are not typos.
"src/predictor/model/*.py" = ["RUF001", "RUF002", "RUF003"]
"tests/model/*.py" = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
plugins = []
# soccerdata, sse_starlette, respx, scipy, pandas lack/skip stubs
[[tool.mypy.overrides]]
module = ["soccerdata.*", "sse_starlette.*", "respx.*", "scipy.*", "pandas.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
